--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-minimal
 title: Javier Arias
-description: Bookmark this to keep an eye on my project updates!
+description: CS Graduate | Python & Data Enthusiast | GitHub Projects
+logo: assets/imgs/20241202_223242.jpg
+show_downloads: false
+theme: jekyll-theme-minimal
