--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ description: CS Graduate | Python & Data Enthusiast | GitHub Projects
 logo: assets/imgs/20241202_223242.jpg
 show_downloads: false
 theme: jekyll-theme-minimal
+custom_css: /assets/css/custom.css
