--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 title: Javier Arias
 description: CS Graduate | Python & Data Enthusiast | GitHub Projects
 logo: assets/imgs/20241202_223242.jpg
-show_downloads: false
+show_downloads: true
+downloads: 
+  - name: Resume
+    file: assets/files/Resume.pdf
 theme: jekyll-theme-minimal
 
