--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Javier Arias
 description: CS Graduate | Python & Data Enthusiast | GitHub Projects
-logo: assets/imgs/Javier-Profile-Picture.jpg
+logo: assets/imgs/Javier-Profile-Picture.png
 show_downloads: false
 theme: jekyll-theme-minimal
 
